# template_python_discord_bot

./: .editorconfig  .pre-commit-config.yaml  AUTHORS.rst  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  PRIVACY.md  README.md  config.ini  docker-compose.interactive.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  heroku.yml  local.env  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: code_security_analysis.yml  python_analysis.yml  tests.yml
alembic/: README.md  env.py
alembic/versions/: 01cffc7b13aa_bot_version_table.py  1c147339c9a6_example_user_table.py  3749eb38a020_message_id_string.py  b04002e80f7d_bot_messsages_table.py  b79635ca1431_user_tos_usertos.py  c1f053f132a5_changed_bot_massage.py  e7b927505d60_added_tos_hash.py
docs/: CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_BEST_PRACTICES.md  DOCUMENTATION.md  GETTING_STARTED_DEVELOPING.md  INDEX.md  PROJECT_LEAD.md  SECRETS.md  SENTRY.md  TEAM.md  TICKETS.md
docs/cloud_providers/: HEROKU.md
src/project_template/: config.py  main.py  schema.py
src/project_template/cogs/: error_handler.py  example.py  greetings.py  tos.py
src/project_template/utils/: checks.py  database.py  decorators.py  exceptions.py  load_secrets.py  load_settings.py  logger.py  utils.py
tests/factories/: factories.py
tests/unit/: conftest.py
tests/unit/utils/: test_database.py  test_decorators.py  test_utils.py
