[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
alembic = "^1.6.5"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.20"
sentry-sdk = "^1.3.0"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
mypy = "^0.902"
pre-commit = "^2.13.0"
isort = "^5.8.0"
SQLAlchemy = { extras = ["mypy"], version = "^1.4.20" }

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src/project_template:$MYPY_CONFIG_FILE_DIR/tests"
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
combine_as_imports = "True"
force_alphabetical_sort_within_sections = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=replaceme --cov-report term --cov-resport html"
testpaths = [
    "tests",
]
